<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/radius"
    android:layout_margin="@dimen/margin"
    android:backgroundTint="@color/purple_700">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="@dimen/imageSize"
            android:layout_height="@dimen/imageSize"
            android:layout_gravity="center"
            android:background="@drawable/characters"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/margin"/>
            <TextView
                android:id="@+id/characterName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/characterSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/characterStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/textSize"/>
            <TextView
                android:id="@+id/characterGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/textSize"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

